# Correlation-Heatmap-System

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  Report.md  Summary.md  setup-without-docker.sh  setup.py  setup.sh
backend/: .gitignore  Dockerfile  README.md  REPORT.md  docker-compose.yml  env.template  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/api/graphql/: __init__.py  schema.py  types.py
backend/app/api/graphql/resolvers/: __init__.py
backend/app/api/v1/: correlations.py  decoupling.py  export.py  router.py  websocket.py
backend/app/api/websocket/: handlers.py  manager.py
backend/app/database/: base.py  models.py  session.py
backend/app/exceptions/: __init__.py
backend/app/models/: correlation.py
backend/app/repositories/: base.py  correlation_repo.py
backend/app/services/: backtest_engine.py  correlation_calculator.py  data_fetcher.py  decoupling_detector.py  fiass_calculator.py  spanning_tree_builder.py
backend/app/services/clients/: __init__.py  alpha_vantage.py  finnhub.py  yfinance.py
backend/app/utils/: h3_utils.py  lorenz_attractor.py
backend/app/workflows/: __init__.py  backtest_workflow.py  correlation_discovery.py
backend/cadence/: __init__.py  worker.py
backend/cadence/activities/: __init__.py  calculate_correlations.py  fetch_data.py  run_backtest.py
backend/scripts/: backtest_majors.py
frontend/: README.md  env.template  index.html  package.json  vite.config.ts
(+11 files in other folders)
